# openscreen

./: .gitmodules  DEPS
.github/workflows/: close-pull-requests.yml
build_overrides/: build.gni
cast/common/channel/: cast_socket.cc
cast/standalone_receiver/: main.cc
cast/standalone_sender/: main.cc
cast/streaming/impl/: capture_recommendations_unittest.cc
cast/streaming/public/: capture_recommendations.cc
discovery/mdns/public/: mdns_reader.cc  mdns_reader_unittest.cc  mdns_writer.cc  mdns_writer_unittest.cc
docs/: trace_logging.md
osp/go/: go.mod  go.sum
osp/impl/quic/: quic_utils.cc
platform/: BUILD.gn
platform/base/: ip_address.cc  ip_address.h  ip_address_unittest.cc  trace_logging_types.cc  trace_logging_types.h
platform/impl/: DEPS  network_interface_linux.cc  network_interface_mac.cc  perfetto_trace_logging_platform.cc  perfetto_trace_logging_platform.h  perfetto_trace_logging_platform_unittest.cc  socket_address_posix.cc  socket_address_posix.h  udp_socket_posix.cc
testing/gmock/: BUILD.gn
testing/gtest/: BUILD.gn
