# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# Lightweight wrapper group for use with Perfetto, which expects to be able to
# find gmock here.
group("gmock") {
  testonly = true
  public_deps = [ "//third_party/googletest:gmock" ]
}
